<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Activity -->
    <string name="app_name">SocketTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="start_client">Client</string>
    
    <!-- Client Activity -->
    <string name="port_label">Port:</string>
    <string name="ip_label">IP:</string>
    <string name="port_input_hint">(Default: 9001)</string>
    <string name="ip_input_hint">(Localhost: 10.0.2.2)</string>
	<string name="caps_label">Text:</string>
	<string name="caps_input_hint">Random text</string>
    <string name="caps_button">Capsify!</string>
	
    <color name="black">#000000</color>

    <string name="title_activity_client">Client</string>

</resources>
